--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+@font-face {
+  font-family: 'Inconsolata';
+  src: local('Inconsolata'), url(./fonts/inconsolata.ttf) format('truetype');
+}
+
+body {
+  margin: 0;
+  background-color: #000000;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  font-family: 'Inconsolata';
+  color: white;
+  padding: 0;
+  font-size: 20px;
+  margin: 0;
+  margin-top: 16px;
+}
